<resources>
    <string name="app_name">sCanEz</string>
    <string name="acc_drawer_open" />
    <string name="acc_drawer_close" />

    <string name="scanner_activity">ZXing Scanner - Full Activity</string>
    <string name="scanner_fragment_activity">ZXing Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">ZXing Scanner - Simple Activity</string>
    <string name="custom_view_finder_scanner_activity">ZXing Scanner - Custom View Finder Activity</string>
    <string name="scaling_scanner_activity">ZXing Scanner - Scaling Activity</string>
    <string name="simple_scanner_fragment_activity">ZXing Scanner - Simple Fragment Activity</string>
    <string name="full_screen_scanner_fragment_activity">ZXing Scanner - Full Screen Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="full_screen_sample">Full Screen Fragment Sample</string>
    <string name="custom_view_finder_sample">Custom View Finder Sample</string>
    <string name="scaling_sample">Scaling Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="generate_qr_by_id">Generate Code \n By ID</string>
    <string name="generate_qr_by_name">Generate Code \n By Name</string>
    <string name="generate_qr_code">Generate Qr Code</string>
    <string name="generate_b_arcode">Generate Barcode</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="scan_qr_code">Scan Qr Code</string>
    <string name="app_version">App Version :</string>
    <string name="i_am_an_android_developer_who_likes_to_play_around_with_things_when_have_some_time_to_kill_so_i_came_up_with_this_pet_project">\u00A0\u00A0\u00A0\u00A0\u00A0I am an Android developer who likes to play around with things when have some time to kill, so i came up with this pet project.</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="name">Name</string>
    <bool name="cameraPreviewShouldFillView">true</bool>


</resources>
