<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/dashboard_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:background="#40FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="200dp">
        </LinearLayout>

        <LinearLayout
            android:elevation="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="@dimen/dp_10"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/clickScanQRCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/qr_code"/>
                </LinearLayout>
                    <TextView
                        android:id="@+id/txt_clickScanQRCode"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_16"
                        android:text="@string/scan_qr_code"/>
                </LinearLayout>
                <View
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/line"
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="match_parent"/>
                <LinearLayout
                    android:layout_marginBottom="@dimen/dp_10"

                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/clickToBarcode"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/barcode"/>

                </LinearLayout>
                    <TextView
                        android:id="@+id/txt_clickToBarcode"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_16"
                        android:text="@string/scan_barcode"/>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/linear_ClickById"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/id_pass"/>
                    </LinearLayout>
                    <TextView
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_16"
                        android:text="@string/generate_qr_by_id"/>
                </LinearLayout>
                <View
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@drawable/line"
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="match_parent"/>
                <LinearLayout
                    android:id="@+id/linear_ClickByName"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/invoice"/>

                    </LinearLayout>
                    <TextView
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_16"
                        android:text="@string/generate_qr_by_name"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:elevation="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <LinearLayout
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <EditText
                android:padding="@dimen/dp_10"
                android:background="@drawable/edittext_background"
                android:layout_marginTop="@dimen/dp_10"
                android:id="@+id/edt_nameOrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:singleLine="true"
                android:textAllCaps="false"
                android:hint="@string/name"
                android:text=""/>

                <Button
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:id="@+id/btn_SearchCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Search"
                    android:textSize="@dimen/sp_18"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_background" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
</FrameLayout>