<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imgToolBarBack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/dp_10"
                            android:src="@drawable/back_icon"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/imgToolBarHome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:padding="@dimen/dp_10"
                            android:src="@drawable/menu_icon"
                            android:visibility="gone" />
                    </RelativeLayout>
                    <TextView
                        android:id="@+id/textViewToolBarTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_marginRight="@dimen/dp_30"
                        android:layout_weight="1"
                        android:text=""
                        android:textStyle="bold"
                        android:padding="@dimen/dp_5"
                        android:fontFamily="assets/fonts/Trajan Bold.ttf"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                    <ImageView
                        android:id="@+id/imgToolBarMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_10"
                        android:visibility="visible" />
                </LinearLayout>


            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/left_drawer"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:background="@color/colorPrimaryDark"
        android:divider="@color/colorPrimary"
        android:dividerHeight="0dp"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/slider"
        android:choiceMode="singleChoice"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_80"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/sl_image" />


            <LinearLayout
                android:id="@+id/scan_qrcode"
                android:layout_marginTop="@dimen/dp_60"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/scan_qr"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/scan_qr_code"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_20" />
            </LinearLayout>
            <View
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGray"/>
            <LinearLayout
                android:id="@+id/scan_barcode"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/scan_barcode"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/scan_barcode"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_20" />
            </LinearLayout>
            <View
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGray"/>
            <LinearLayout
                android:id="@+id/click_history"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/history"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="History"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_20" />
            </LinearLayout>
            <View
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGray"/>
            <LinearLayout
                android:id="@+id/click_aboutus"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/aboutus"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="About Us"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_20" />
            </LinearLayout>
            <View
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGray"/>
            <LinearLayout
                android:gravity="center|bottom"
                android:layout_gravity="center|bottom"
                android:id="@+id/appversion"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_16" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_0_0"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </FrameLayout>

</android.support.v4.widget.DrawerLayout>